--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "TMB",
   "license": "ISC",
   "dependencies": {
+    "event-emitter": "^0.3.5",
+    "linebyline": "^1.3.0",
     "usb": "^1.7.1"
   },
   "repository": {
