--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "event-emitter": "^0.3.5",
     "linebyline": "^1.3.0",
+    "serialport": "^9.2.0",
     "usb": "^1.7.1"
   },
   "repository": {
